--- a/package.json
+++ b/package.json
@@ -16,9 +16,14 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
+    "@supabase/supabase-js": "^1.31.1",
+    "babel-plugin-inline-dotenv": "^1.6.0",
     "expo": "~44.0.0",
+    "expo-auth-session": "^3.5.0",
+    "expo-random": "~12.1.1",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -34,6 +39,7 @@
     "@types/react-native": "~0.64.12",
     "@typescript-eslint/eslint-plugin": "^5.14.0",
     "@typescript-eslint/parser": "^5.14.0",
+    "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^8.10.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.3",
