--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-screens": "~3.10.1",
     "react-native-svg": "12.1.1",
     "react-native-svg-uri": "^1.2.3",
+    "react-native-url-polyfill": "^1.3.0",
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.1",
     "twrnc": "^3.0.2"
